# api/device/handler/fingerprint.go
@@ -9,6 +9,7 @@ import (
 	"sipamit-be/api/device/repo"
 	"sipamit-be/internal/pkg/context"
 	"sipamit-be/internal/pkg/log"
+	"sipamit-be/internal/pkg/util"
 )
 
 type fingerPrintForm struct {
@@ -59,11 +60,17 @@ func NewFingerPrintAPIHandler(e *echo.Echo, db *mongo.Database) *FingerPrintHand
 // @Summary Get all fingerprints
 // @ID get-all-fingerprints
 // @Security ApiKeyAuth
+// @Param q query string false "Search by nama"
+// @Param page query int false "Page number pagination" default(1)
+// @Param limit query int false "Limit pagination" default(10)
+// @Param sort query string false "Sort" enums(asc,desc)
 // @Router /api/fingerprints [GET]
 // @Produce json
 // @Success 200
 func (h *FingerPrintHandler) findAll(c echo.Context) error {
-	fingerprints, err := h.fpRepo.FindAll()
+	cq := util.NewCommonQuery(c)
+
+	fingerprints, err := h.fpRepo.FindAll(cq)
 	if err != nil {
 		if !errors.Is(err, mongo.ErrNoDocuments) {
 			log.Errorf("Failed to get fingerprints: %v", err)
@@ -71,7 +78,18 @@ func (h *FingerPrintHandler) findAll(c echo.Context) error {
 		}
 		return echo.NewHTTPError(http.StatusNotFound, "Fingerprints not found")
 	}
-	return c.JSON(http.StatusOK, fingerprints)
+
+	totalFp, err := h.fpRepo.CountQuery(cq)
+	if err != nil {
+		if !errors.Is(err, mongo.ErrNoDocuments) {
+			log.Errorf("Failed to count fingerprints: %v", err)
+			return echo.NewHTTPError(http.StatusInternalServerError, "Internal server error")
+		}
+		return echo.NewHTTPError(http.StatusNotFound, "Fingerprints not found")
+	}
+
+	result := util.MakeResult(fingerprints, totalFp, cq.Page, cq.Limit)
+	return c.JSON(http.StatusOK, result)
 }
 
 // findOne
