# api/device/handler/komputer_ph1.go
@@ -9,6 +9,7 @@ import (
 	"sipamit-be/api/device/repo"
 	"sipamit-be/internal/pkg/context"
 	"sipamit-be/internal/pkg/log"
+	"sipamit-be/internal/pkg/util"
 )
 
 type komputerPH1Form struct {
@@ -64,11 +65,17 @@ func NewKomputerPH1APIHandler(e *echo.Echo, db *mongo.Database) *KomputerPH1Hand
 // @Summary Get all komputer-ph1s
 // @ID get-all-komputer-ph1s
 // @Security ApiKeyAuth
+// @Param q query string false "Search by nama"
+// @Param page query int false "Page number pagination" default(1)
+// @Param limit query int false "Limit pagination" default(10)
+// @Param sort query string false "Sort" enums(asc,desc)
 // @Router /api/komputer-ph1s [GET]
 // @Produce json
 // @Success 200
 func (h *KomputerPH1Handler) findAll(c echo.Context) error {
-	komputerPH1s, err := h.kph1Repo.FindAll()
+	cq := util.NewCommonQuery(c)
+
+	komputerPH1s, err := h.kph1Repo.FindAll(cq)
 	if err != nil {
 		if !errors.Is(err, mongo.ErrNoDocuments) {
 			log.Errorf("Failed to get komputerPH1s: %v", err)
@@ -76,7 +83,18 @@ func (h *KomputerPH1Handler) findAll(c echo.Context) error {
 		}
 		return echo.NewHTTPError(http.StatusNotFound, "KomputerPH1s not found")
 	}
-	return c.JSON(http.StatusOK, komputerPH1s)
+
+	totalKph1, err := h.kph1Repo.CountQuery(cq)
+	if err != nil {
+		if !errors.Is(err, mongo.ErrNoDocuments) {
+			log.Errorf("Failed to count komputerPH1s: %v", err)
+			return echo.NewHTTPError(http.StatusInternalServerError, "Internal server error")
+		}
+		return echo.NewHTTPError(http.StatusNotFound, "KomputerPH1s not found")
+	}
+
+	result := util.MakeResult(komputerPH1s, totalKph1, cq.Page, cq.Limit)
+	return c.JSON(http.StatusOK, result)
 }
 
 // findOne
