# api/device/handler/ups.go
@@ -9,6 +9,7 @@ import (
 	"sipamit-be/api/device/repo"
 	"sipamit-be/internal/pkg/context"
 	"sipamit-be/internal/pkg/log"
+	"sipamit-be/internal/pkg/util"
 )
 
 type upsForm struct {
@@ -61,11 +62,17 @@ func NewUPSAPIHandler(e *echo.Echo, db *mongo.Database) *UPSHandler {
 // @Summary Get all ups
 // @ID get-all-ups
 // @Security ApiKeyAuth
+// @Param q query string false "Search by nama"
+// @Param page query int false "Page number pagination" default(1)
+// @Param limit query int false "Limit pagination" default(10)
+// @Param sort query string false "Sort" enums(asc,desc)
 // @Router /api/ups [GET]
 // @Produce json
 // @Success 200
 func (h *UPSHandler) findAll(c echo.Context) error {
-	ups, err := h.upsRepo.FindAll()
+	cq := util.NewCommonQuery(c)
+
+	ups, err := h.upsRepo.FindAll(cq)
 	if err != nil {
 		if !errors.Is(err, mongo.ErrNoDocuments) {
 			log.Errorf("Failed to get ups: %v", err)
@@ -73,7 +80,18 @@ func (h *UPSHandler) findAll(c echo.Context) error {
 		}
 		return echo.NewHTTPError(http.StatusNotFound, "UPS not found")
 	}
-	return c.JSON(http.StatusOK, ups)
+
+	totalUps, err := h.upsRepo.CountQuery(cq)
+	if err != nil {
+		if !errors.Is(err, mongo.ErrNoDocuments) {
+			log.Errorf("Failed to count ups: %v", err)
+			return echo.NewHTTPError(http.StatusInternalServerError, "Internal server error")
+		}
+		return echo.NewHTTPError(http.StatusNotFound, "UPS not found")
+	}
+
+	result := util.MakeResult(ups, totalUps, cq.Page, cq.Limit)
+	return c.JSON(http.StatusOK, result)
 }
 
 // findOne
